# vaporetto

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README-ja.md  README.md  app-66b3dc20285db6e6.js  app-66b3dc20285db6e6_bg.wasm  index.html  worker.js
.github/workflows/: deploy.yml  rust.yml
bench/: README.md  compile_all.sh  download_resources.sh  elapsed_time.patch  run_all.sh  stats.py
bench/kuromoji/: pom.xml
bench/kuromoji/src/main/java/kuromoji_bench/: App.java
bench/sudachi/: pom.xml  sudachi.json
bench/sudachi/src/main/java/sudachi_bench/: App.java
convert_kytea_model/: Cargo.toml
convert_kytea_model/src/: main.rs
evaluate/: Cargo.toml
evaluate/src/: main.rs
examples/embedded_device/: Cargo.toml  README.md  build.rs  memory.x  openocd.gdb
examples/embedded_device/.cargo/: config.toml
examples/embedded_device/src/: main.rs
examples/wasm/: Cargo.toml  README.md  index.html
examples/wasm/.github/workflows/: deploy.yml
examples/wasm/i18n/en/: vaporetto_wasm.ftl
examples/wasm/locales/: ja.ftl
examples/wasm/src/: lib.rs  locales.rs  text_input.rs  token_view.rs
examples/wasm/www/: index.html  index.js
figures/: comparison.ngp  comparison.txt
manipulate_model/: Cargo.toml
manipulate_model/src/: main.rs
model/: model.zstd
parse_bccwj_xml/: Cargo.toml
parse_bccwj_xml/src/: main.rs
predict/: Cargo.toml
predict/src/: main.rs
resources/: docs.tok
train/: Cargo.toml
train/src/: main.rs
vaporetto/: Cargo.toml  README.md
vaporetto/src/: char_scorer.rs  da_ahocorasick.rs  dict_model.rs  dict_scorer.rs  errors.rs  feature.rs  kytea_model.rs  lib.rs  model.rs  ngram_model.rs  predictor.rs  sentence.rs  tag_model.rs  tag_trainer.rs  trainer.rs  type_predictor.rs  type_scorer.rs  utils.rs
vaporetto/src/char_scorer/: boundary_scorer.rs  boundary_tag_scorer.rs
vaporetto/src/type_scorer/: boundary_scorer.rs  boundary_scorer_cache.rs  boundary_tag_scorer.rs
vaporetto_rules/: Cargo.toml  README.md
vaporetto_rules/src/: concat_cons_char_types.rs  concat_grapheme_clusters.rs  lib.rs  preprocess_kytea_style.rs  sentence_filters.rs  string_filters.rs
vaporetto_rules/src/sentence_filters/: concat_grapheme_clusters.rs  kytea_wsconst.rs  pattern_match_tagger.rs  split_linebreaks.rs
vaporetto_rules/src/string_filters/: kytea_fullwidth.rs
vaporetto_tantivy/: Cargo.toml  README.md
vaporetto_tantivy/src/: lib.rs
vaporetto_tantivy/test_model/: model.zst  test_corpus.tok
vaporetto_wasm/: Cargo.toml  README.md  build_portable_js.py  build_portable_js.sh
vaporetto_wasm/src/: lib.rs
vaporetto_wasm/www/: index.css  index.html  index.js
