[package]
name = "manipulate_model"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }  # MIT or Apache-2.0
csv = "1.2"  # Unlicense or MIT
serde = { version = "1.0", features = ["derive"] }  # MIT or Apache-2.0
vaporetto = { path = "../vaporetto" }  # MIT or Apache-2.0
zstd = { version = "0.13", features = ["zstdmt"] }  # MIT
# workaround: https://github.com/gyscos/zstd-rs/issues/270
zstd-sys = "=2.0.10"
