[package]
name = "manipulate_model"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # MIT or Apache-2.0
csv = "1.3"  # Unlicense or MIT
serde = { version = "1.0", features = ["derive"] }  # MIT or Apache-2.0
vaporetto = { path = "../vaporetto" }  # MIT or Apache-2.0
zstd = { version = "0.13.3", features = ["zstdmt"] }  # MIT
