[package]
name = "predict"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }  # MIT or Apache-2.0
vaporetto = { path = "../vaporetto", features = ["charwise-daachorse"] }  # MIT or Apache-2.0
vaporetto_rules = { path = "../vaporetto_rules" }  # MIT or Apache-2.0
zstd = "0.11"  # MIT
