[package]
name = "predict"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"  # MIT
clap = { version = "4.5", features = ["derive"] }  # MIT or Apache-2.0
vaporetto = { path = "../vaporetto" }  # MIT or Apache-2.0
vaporetto_rules = { path = "../vaporetto_rules" }  # MIT or Apache-2.0
zstd = "0.13.3"  # MIT
