[package]
name = "vaporetto"
version = "0.5.0"
edition = "2021"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Vaporetto: a pointwise prediction based tokenizer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vaporetto"
repository = "https://github.com/daac-tools/vaporetto"
readme = "README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing", "no-std"]

[dependencies]
bincode = { version = "2.0.0-rc.1", default-features = false, features = ["derive"] }  # MIT
daachorse = { version = "0.4.1", default-features = false }  # MIT or Apache-2.0

hashbrown = { version = "0.12.1", optional = true }  # MIT or Apache-2.0
liblinear = { version = "1", optional = true }  # MIT

[features]
default = ["std", "cache-type-score", "fix-weight-length", "tag-prediction", "charwise-pma"]

# default: on
alloc = ["bincode/alloc"]
std = ["alloc", "bincode/std"]
cache-type-score = ["alloc"]
fix-weight-length = ["alloc"]
tag-prediction = ["alloc", "bincode/atomic", "hashbrown"]
charwise-pma = ["alloc"]

kytea = ["std"]
train = ["std", "liblinear"]
portable-simd = ["fix-weight-length"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
