[package]
name = "vaporetto"
version = "0.6.1"
edition = "2021"
rust-version = "1.61"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Vaporetto: a pointwise prediction based tokenizer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vaporetto"
repository = "https://github.com/daac-tools/vaporetto"
readme = "README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing", "no-std"]

[dependencies]
bincode = { version = "2.0.0-rc.2", default-features = false, features = ["alloc", "derive"] }  # MIT
daachorse = "1.0.0"  # MIT or Apache-2.0
hashbrown = "0.13.1"  # MIT or Apache-2.0

liblinear = { version = "1", optional = true }  # MIT

[features]
default = ["std", "cache-type-score", "fix-weight-length", "tag-prediction", "charwise-pma"]

# default: on
alloc = []
std = ["alloc", "bincode/std"]
cache-type-score = ["alloc"]
fix-weight-length = ["alloc"]
tag-prediction = ["alloc"]
charwise-pma = ["alloc"]

kytea = ["std"]
train = ["std", "liblinear"]
portable-simd = ["fix-weight-length"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
