[package]
name = "vaporetto_rules"
version = "0.3.0"
edition = "2018"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Rule-base filters for Vaporetto"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vaporetto"
repository = "https://github.com/daac-tools/vaporetto"
readme = "README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing"]

[dependencies]
unicode-segmentation = "1.9.0"  # MIT or Apache-2.0
vaporetto = { path = "../vaporetto", version = "0.3.0", default-features = false }  # MIT or Apache-2.0
