[package]
name = "vaporetto_rules"
version = "0.6.3"
edition = "2021"
rust-version = "1.67"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Rule-base filters for Vaporetto"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vaporetto"
repository = "https://github.com/daac-tools/vaporetto"
readme = "README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing", "no-std"]

[dependencies]
hashbrown = "0.14.0"  # MIT or Apache-2.0
unicode-segmentation = "1.10.1"  # MIT or Apache-2.0
vaporetto = { path = "../vaporetto", version = "=0.6.3", default-features = false, features = ["alloc"] }  # MIT or Apache-2.0

[dev-dependencies]
vaporetto = { path = "../vaporetto", version = "=0.6.3" }  # MIT or Apache-2.0
