[package]
name = "vaporetto_tantivy"
version = "0.4.0"
edition = "2021"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Vaporetto Tokenizer for Tantivy"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vaporetto"
repository = "https://github.com/daac-tools/vaporetto"
readme = "README.md"
keywords = ["japanese", "tokenizer", "tantivy"]
categories = ["text-processing"]

[dependencies]
vaporetto = { path = "../vaporetto", version = "0.4.0" }  # MIT or Apache-2.0
vaporetto_rules = { path = "../vaporetto_rules", version = "0.4.0" }  # MIT or Apache-2.0
tantivy = "0.18"  # MIT

[dev-dependencies]
ruzstd = "0.2.4"  # MIT
