[package]
name = "vaporetto_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.52"  # MIT OR Apache-2.0
vaporetto = { path = "../vaporetto" }  # MIT OR Apache-2.0
vaporetto_rules = { path = "../vaporetto_rules" }  # MIT OR Apache-2.0
wasm-bindgen = "0.2.75"  # MIT OR Apache-2.0
