[package]
name = "vaporetto_embedded_device"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"

vaporetto = { path = "../../vaporetto", default-features = false }
vaporetto_rules = { path = "../../vaporetto_rules" }

alloc-cortex-m = "0.4.4"

[build-dependencies]
vaporetto = { path = "../../vaporetto", default-features = false, features = ["alloc"] }
ruzstd = "0.8.0"  # MIT

[profile.release]
codegen-units = 1
debug = true
lto = true
