[package]
name = "vaporetto_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-timers = "0.3.0"  # MIT or Apache-2.0
gloo-worker = "0.5.0"  # MIT or Apache-2.0
i18n-embed = { version = "0.14.1", features = ["fluent-system", "web-sys-requester"]}  # MIT
i18n-embed-fl = "0.8.0"  # MIT
js-sys = "0.3.69"  # MIT or Apache-2.0
once_cell = "1.19.0"  # MIT or Apache-2.0
ouroboros = "0.18.4"  # MIT or Apache-2.0
rust-embed = "8.5.0"  # MIT
ruzstd = "0.7.0"  # MIT
serde = "1"  # MIT or Apache-2.0
unic-langid = { version = "0.9.5", features = ["macros"] }  # MIT or Apache-2.0
vaporetto = { path = "../../vaporetto", default-features = false, features = ["std", "cache-type-score", "fix-weight-length", "tag-prediction"] }  # MIT or Apache-2.0
vaporetto_rules = { path = "../../vaporetto_rules" }  # MIT or Apache-2.0
wasm-bindgen = "0.2.92"  # MIT or Apache-2.0
wasm-bindgen-futures = "0.4.42"  # MIT or Apache-2.0
web-sys = { version = "0.3.70", features = ["Clipboard", "Event", "EventTarget", "InputEvent"] }  # MIT or Apache-2.0
yew = { version = "0.21", features = ["csr"] }  # MIT or Apache-2.0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
